# dagster-pipes-elixir

./: .gitignore  README.md  dagger.json
.dagger/: README.md  mix.exs
.dagger/dagster_pipes_elixir/: .gitignore  README.md  mix.exs
.dagger/dagster_pipes_elixir/lib/: dagster_pipes_elixir.ex
.dagger/dagster_pipes_elixir/test/: dagster_pipes_elixir_test.exs
.dagger/lib/: dagster_pipes_elixir.ex
.github/: README.md  dagger.json  mix.exs
.github/dot_github/: .gitignore  README.md  mix.exs
.github/dot_github/lib/: dot_github.ex
.github/dot_github/test/: dot_github_test.exs
.github/lib/: ci.ex
.github/workflows/: ci.gen.yml  test.gen.yml  test.yaml
dagster_pipes/: .gitignore  LICENSE  README.md  mix.exs  test.sh
dagster_pipes/lib/: dagster_pipes.ex
dagster_pipes/lib/dagster_pipes/: channels.ex  context.ex  context_data.ex  context_loader.ex  data_provenance.ex  error.ex  gen.ex  message.ex  message_channel.ex  message_writer.ex  metadata_value.ex  params.ex  params_loader.ex  partition_key_range.ex  partition_time_window.ex  writers.ex
dagster_pipes/test/: dagster_pipes_test.exs  test.exs
dagster_pipes/test/dagster_pipes/: context_test.exs  params_test.exs
dagster_pipes/test/support/: test_context_loader.ex  test_message_channel.ex  test_message_writer.ex  test_params_loader.ex
examples/dagster-pipes-tutorial/: .gitignore  README.md  external_code.exs  pyproject.toml  setup.cfg  setup.py
examples/dagster-pipes-tutorial/dagster_pipes_tutorial/: assets.py  definitions.py
ghagen/: dagger.json
ghagen/ghagen/: .gitignore  README.md  mix.exs
integration_tests/: README.md  pipes.toml  pyproject.toml
integration_tests/tests/: __init__.py  conftest.py  test_pipes.py
(+3 files in other folders)
